--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       --bg:#0b0f14;           /* dial */
       --bezel:#0a0d10;        /* outer ring */
       --metal:#1b222b;        /* markers */
-      --accent:#e33a3a;       /* chrono seconds */
+      --accent:#39FF14;       /* chrono seconds */
       --accent-2:#2aa7ff;     /* details */
       --text:#e8eef5;         /* labels */
       --muted:#9fb2c9;
