--- a/index.html
+++ b/index.html
@@ -141,14 +141,22 @@
       <!-- Center pinion -->
       <circle cx="200" cy="200" r="6.5" fill="#cfe2ff"/>
 
-      <!-- Chrono central seconds hand -->
+      <!-- Chrono central seconds hand 
       <g id="chrono-hand" transform="translate(200,200)">
         <line id="hand-chrono" x1="0" y1="8" x2="0" y2="-160" stroke="var(--accent)" stroke-width="2.8" stroke-linecap="round"/>
         <circle r="4.2" fill="var(--accent)"/>
-      </g>
+      </g>-->
 
       <!-- Applied hour markers -->
       <g id="hours"></g>
+
+
+      <!-- Chrono central seconds hand (moved to render on top) -->
+      <g id="chrono-hand" transform="translate(200,200)">
+        <line id="hand-chrono" x1="0" y1="8" x2="0" y2="-160"
+              stroke="var(--accent)" stroke-width="2.8" stroke-linecap="round"/>
+        <circle r="4.2" fill="var(--accent)"/>
+      </g>
 
       <!-- Logo appliqué -->
       <g transform="translate(200,120)" opacity=".9">
