--- a/index.html
+++ b/index.html
@@ -107,7 +107,13 @@
         <circle cx="200" cy="200" r="176" fill="none" stroke="#0e131a" stroke-width="6"/>
         <g id="tickSet"></g>
       </g>
-
+      
+       <!-- Logo appliqué -->
+      <g transform="translate(200,120)" opacity=".9">
+        <!-- <rect x="-42" y="-12" width="84" height="24" rx="8" fill="#121821" stroke="#1f2834"/> -->
+        <text x="0" y="6" text-anchor="middle" fill="#dfe9f6" font-size="12" letter-spacing="3">OPULENT HARDWARE</text>
+      </g>
+      
       <!-- Subdials -->
       <g id="subdials" filter="url(#drop)">
         <!-- Minutes @ 3 o'clock -->
