--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
       </g>
 
       <!-- Logo appliqué -->
-      <g transform="translate(200,120)" opacity=".9">
-        <!-- <rect x="-42" y="-12" width="84" height="24" rx="8" fill="#121821" stroke="#1f2834"/> -->
+      <!--<g transform="translate(200,120)" opacity=".9">
+        <rect x="-42" y="-12" width="84" height="24" rx="8" fill="#121821" stroke="#1f2834"/>
         <text x="0" y="6" text-anchor="middle" fill="#dfe9f6" font-size="12" letter-spacing="3">OPULENT HARDWARE</text>
-      </g>
+      </g> -->
 
     </svg>
 
