--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       --shadow:rgba(0,0,0,.55);
     }
     *{box-sizing:border-box}
-    html,body{height:100%;margin:0;background:#0b0f14}
+    html,body{height:100%;margin:0;background:#000000}
     body{display:grid;place-items:center;font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Inter,"Helvetica Neue",Arial}
 
     .wrap{width:min(92vmin,720px);aspect-ratio:1/1;position:relative;}
