--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -17,8 +17,20 @@
       --shadow:rgba(0,0,0,.55);
     }
     *{box-sizing:border-box}
-    html,body{height:100%;margin:0;background:#000000}
-    body{display:grid;place-items:center;font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Inter,"Helvetica Neue",Arial}
+
+    /* Prevent any scrollbars */
+    html,body{
+      height:100%;
+      margin:0;
+      background:#000000;
+      overflow:hidden;
+    }
+
+    body{
+      display:grid;
+      place-items:center;
+      font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Inter,"Helvetica Neue",Arial;
+    }
 
     .wrap{width:min(92vmin,720px);aspect-ratio:1/1;position:relative;}
 
@@ -62,14 +74,43 @@
          box-shadow:0 6px 16px var(--shadow), inset 0 1px 0 rgba(255,255,255,.06);font-weight:600}
     .btn:active{transform:translateY(1px)}
 
-    /* Lap list */
-    .laps{position:absolute;right:-260px;top:0;width:240px;max-height:100%;overflow:auto;padding:8px 0}
+    /* Lap list — fixed so it doesn't widen the page */
+    .laps{
+      position:fixed;
+      right:16px;
+      top:16px;
+      width:240px;
+      max-height:calc(100dvh - 32px);
+      overflow:auto;
+      padding:8px 0;
+    }
+    .laps:empty{ display:none; }
+
     .lap{display:flex;justify-content:space-between;gap:.5rem;padding:.35rem .6rem;margin:.25rem 0;background:#0f141b;border-radius:10px;color:#dfe9f5;font-family:ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,"Liberation Mono","Courier New",monospace; font-size:.82rem; box-shadow:0 6px 14px var(--shadow)}
     .lap small{color:var(--muted)}
-    @media (max-width:980px){.laps{position:static;width:100%;display:flex;flex-direction:column;margin-top:14px}}
+
+    @media (max-width:980px){
+      /* On narrow screens, stack laps under the dial */
+      .laps{
+        position:static;
+        width:100%;
+        display:flex;
+        flex-direction:column;
+        margin-top:14px;
+        max-height:none;
+        padding:8px 0;
+      }
+    }
 
     /* Accessibility hint */
     .hint{position:absolute;left:50%;bottom:-94px;transform:translateX(-50%);color:#7f93ad;font-size:.75rem;opacity:.9}
+
+    /* Dark minimalist scrollbar theme (optional, looks better on dark UI) */
+    ::-webkit-scrollbar { width:8px; height:8px; }
+    ::-webkit-scrollbar-track { background:#0a0a0a; }
+    ::-webkit-scrollbar-thumb { background:#333; border-radius:4px; }
+    ::-webkit-scrollbar-thumb:hover { background:#555; }
+    * { scrollbar-color:#333 #0a0a0a; scrollbar-width:thin; }
   </style>
 </head>
 <body>
@@ -108,9 +149,8 @@
         <g id="tickSet"></g>
       </g>
       
-       <!-- Logo appliqué -->
+      <!-- Logo appliqué -->
       <g transform="translate(200,120)" opacity=".9">
-        <!-- <rect x="-42" y="-12" width="84" height="24" rx="8" fill="#121821" stroke="#1f2834"/> -->
         <text x="0" y="6" text-anchor="middle" fill="#dfe9f6" font-size="12" letter-spacing="3">OPULENT HARDWARE</text>
       </g>
       
@@ -147,29 +187,15 @@
       <!-- Center pinion -->
       <circle cx="200" cy="200" r="6.5" fill="#cfe2ff"/>
 
-      <!-- Chrono central seconds hand 
-      <g id="chrono-hand" transform="translate(200,200)">
-        <line id="hand-chrono" x1="0" y1="8" x2="0" y2="-160" stroke="var(--accent)" stroke-width="2.8" stroke-linecap="round"/>
-        <circle r="4.2" fill="var(--accent)"/>
-      </g>-->
-
-      <!-- Applied hour markers -->
-      <g id="hours"></g>
-
-
-      <!-- Chrono central seconds hand (moved to render on top) -->
+      <!-- Chrono central seconds hand (on top) -->
       <g id="chrono-hand" transform="translate(200,200)">
         <line id="hand-chrono" x1="0" y1="8" x2="0" y2="-160"
               stroke="var(--accent)" stroke-width="2.8" stroke-linecap="round"/>
         <circle r="4.2" fill="var(--accent)"/>
       </g>
 
-      <!-- Logo appliqué -->
-      <!--<g transform="translate(200,120)" opacity=".9">
-        <rect x="-42" y="-12" width="84" height="24" rx="8" fill="#121821" stroke="#1f2834"/>
-        <text x="0" y="6" text-anchor="middle" fill="#dfe9f6" font-size="12" letter-spacing="3">OPULENT HARDWARE</text>
-      </g> -->
-
+      <!-- Applied hour markers -->
+      <g id="hours"></g>
     </svg>
 
     <div class="glare"></div>
@@ -184,6 +210,7 @@
     <div class="hint">Keyboard: Space = start/stop • L = lap • R = reset</div>
   </div>
 
+  <!-- Lap list (now fixed; does not cause overflow) -->
   <div class="laps" id="laps" aria-live="polite" aria-label="Lap times"></div>
 
   <script>
@@ -195,7 +222,6 @@
     const tickSet = document.getElementById('tickSet');
     for(let i=0;i<60;i++){
       const ang = rad(i*6);
-      const cos = Math.cos(ang), sin = Math.sin(ang);
       const rOuter = 176, rInner = i%5===0? 165 : 170;
       const x1 = 200 + rOuter * Math.sin(ang);
       const y1 = 200 - rOuter * Math.cos(ang);
@@ -356,7 +382,6 @@
     // Prefer reduced motion users: fall back to stepped updates (10Hz)
     const media = matchMedia('(prefers-reduced-motion: reduce)');
     if(media.matches){
-      // Override animate with stepped version
       cancelAnimationFrame(rafId);
       function stepped(){
         if(!running) return;
